# osso-lmarbles

./: Makefile.am  autogen.sh  configure.ac
data/: Makefile.am  com.nokia.osso_lmarbles.service.in  com.nokia.osso_lmarbles.startup.service.in  osso_lmarbles.conf.in  osso_lmarbles.desktop.in  osso_lmarbles.game.in
data/levels/: Original
data/profile/: lmarbles_profile
debian/: changelog  control  copyright  osso-lmarbles.install  osso-lmarbles.links  rules
src/: Makefile.am  audio.c  audio.h  callbacks.c  callbacks.h  cfg.c  cfg.h  dynlist.c  dynlist.h  engine_main.c  engine_main.h  file.c  file.h  ft.c  ft.h  game.c  game.h  i18n.h  levels.c  levels.h  main.c  menu.c  menu.h  profile.c  profile.h  sdl.c  sdl.h  stack.c  stack.h  timer.c  timer.h
src/launcher/: lmarbles.c.in
src/launcher/.deps/: lmarbles_l-lmarbles.Po
src/plugin/: plugin.c
